Fix navbar and content to align properly.

--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -1,4 +1,5 @@
 .header-left {
+  grid-column: 1/2;
   background-color: white;
   min-width: 300px;
   max-width: 300px;
